--- a/app/views/pics/_form.html.haml
+++ b/app/views/pics/_form.html.haml
@@ -5,7 +5,7 @@
         = pluralize(@pic.errors.count, 'error')
         prevented this pic from saving
         %ul
-          - @pic.erors.full_message.each do |msg|
+          - @pic.erors.full_messages.each do |msg|
             %li= msg
 
 
