--- a/app/views/pics/_form.html.haml
+++ b/app/views/pics/_form.html.haml
@@ -1,13 +1,12 @@
 = simple_form_for @pic, html: { multipart: true } do |f|
-  -if @pic.errors.any?
+  - if @pic.errors.any?
     #errors
       %h2
-        = pluralize(@pic.errors.count, 'error')
-        prevented this pic from saving
-        %ul
-          - @pic.erors.full_messages.each do |msg|
-            %li= msg
-
+      = pluralize(@pic.errors.count, 'error')
+      prevented this pic from saving
+      %ul
+        - @pic.errors.full_messages.each do |msg|
+          %li= msg
 
   .form-group
     = f.input :title, input_html: { class: 'form-control'}
